# NotesReminder

./: .bumpversion.cfg  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg  sqlx-data.json
.cargo/: config.toml
.github/workflows/: buildx-docker-image.yml  linters.yml  python-app.yml
.sqlx/: query-104d60660351ce63b48ba742f3ef21703d1441201afbab80a2ec8455eac9a85d.json  query-3bc164efe6e90613dc698d05f00bbaaf96e73832a801c245a080af5875f50980.json  query-418065ef10cbaae7e3f7f54a743b93bf0a46c50ba2d7198ece6c3de9510f75c4.json  query-4fb30e20d6ca5a9bc8533724833d66aac14b9174f77bbad9d1441d25615e94b9.json  query-6f50d611160d40b634f94021505209818e7fc9bbab3e9f663cc2faa5e0156f54.json  query-82b6ba1ec92bf2e0da1e72c06b50c6de93b1c92c45b9ce5c92c4a37c899592f7.json  query-836b758f91e06b85dcff825546a728da6a237075fe83c5da805c65ebe9cae7e7.json  query-88df175c997f4e15b8f27b3d13d6be64e526d175ca782dceeb81764337a6bf15.json  query-a08b700ae013a4901bf34a409b48a6718cf8810505292d6924dcc96db2525e80.json  query-b2b4aafd3ad8a29a17adce0beb63e6b167b177595d14234c77a5320e13d8ec45.json  query-b8f7f4a1f61cfeba5ffe2689db0b59e75513e7502b011e9fa8abeb19a394eb99.json  query-cce5c155e445c8d6897302a7a5783215d56c9acd183b087877a5c90e2f70e363.json  query-e236efe269bdbd26e6084fceb4779b535bd0001d6a125f02ee7335c4cea1e451.json  query-fff6ef84eb50d264078d9e7572ea27b861ce71f8c14e9b60f614f129c4bcfaf7.json
reminder/: main.py
reminder/common/: bot_api.py  database.py  logger.py  settings.py
reminder/models/: models.py
reminder/remind/: db.py  routes.py  schemas.py
src/: db.rs  lib.rs  main.rs  tracker_api.rs
src/models/: models.py
src/remind/: routes.py
