[package]
name = "notes-reminder"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono" ] }
tokio = { version = "1.28", features = ["full"] }
sqlx-cli = { version = "0.6", default-features=false, features = [ "rustls", "postgres" ] }
serde_json = "1"
chrono = "0.4"
serde = {version = "1", features = [ "derive" ] }
rand = "0.8"
uuid  = { version = "1.3", features = ["v4"] }
regex = "1.8"
teloxide = { version="0.12", default-features=false, features = [ "rustls", "ctrlc_handler" ]}
log = "0.4"
env_logger = "0.10.0"
hyper = { version = "0.14", default-features=false, features = [ "client", "http1" ]}
signal-hook = "0.3"

[[bin]]
name = "app"
path = "src/main.rs"
