[tool.poetry]
name = "notesreminder"
version = "0.1.0"
description = ""
authors = ["kunansy <kolobov.kirill@list.ru>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
environs = "~9.5.0"
aiogram = "~2.24"
asyncpg = "~0.27.0"
SQLAlchemy = "~1.4.36"
orjson = "~3.8.0"
types-orjson = "~3.6.2"
pydantic = "~1.10.1"


[tool.poetry.group.dev.dependencies]
mypy = "~1.0.0"
bumpversion = "~0.6.0"
flake8 = "~6.0.0"
greenlet = "~2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
